OAK-9535 related : trying to increase mvn memory